--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
         <div id="about" class="result-section" style="display: none; margin-top: 30px;">
             <div class="result-title">О проекте</div>
             <div class="result-content">
-                <p>Набор математических приложений для образовательных целей</p>
+                <p>Набор математических приложений в рамках прохождения ознакомительной практики, выолнил Блинов С.А., студент группы</p>
                 <p>Включает три инструмента для работы с:</p>
                 <ul style="text-align: left; margin-left: 20px;">
                     <li>Векторными вычислениями</li>
                     <li>Операциями с матрицами</li>
                     <li>Вычислением рядов</li>
                 </ul>
+                <a href="./Отчет по ознакомительной практике Блинов.docx">ссылка на отчет по практике</a>
             </div>
         </div>
     </div>
